<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                <EditText
                    android:id="@+id/input_server_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_serverURl"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                <EditText
                    android:id="@+id/input_server_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_serverPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/syncSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Autosync"
                    android:textOff="Autosync Off!"
                    android:textOn="Autosync On" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/intervalLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="Interval"
                    android:textColor="@color/dialog_sync_labels"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/intervalDropper"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:drawSelectorOnTop="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lastDateSynced"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:gravity="right"
                    android:text=""
                    android:textSize="8sp"
                    android:textStyle="italic" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>