...
    <string name="enter_username">Enter Username</string>
    <string name="login">Login</string>
    <string name="courses">Courses</string>
    <string name="what_would">What would you like to share?</string>
    <string name="delete_record">Are you sure you want to delete the following ?</string>
    <string name="edit_post">Edit Post</string>
    <string name="get_started">GET STARTED</string>
    <string name="year">Year</string>
    <string name="publisher">Publisher</string>
    <string name="link_to_license">Link to license</string>
    <string name="resource_for">Resource For</string>
    <string name="open_which_file">Open Which File</string>
    <string name="file_upload">File Upload</string>
...
